# eeg2025

./: .editorconfig  .gitignore  .gitignore_updates_summary.md  ACTION_CHECKLIST.md  ADVANCED_METHODS_PLAN.md  ATTENTION_CNN_PROPOSAL.md  BEFORE_AFTER_COMPARISON.md  C1_IMPROVEMENT_PLAN.md  CHALLENGE1_IMPROVEMENT_ACTIVE.md  CHALLENGE1_IMPROVEMENT_PLAN.md  CHALLENGE2_TRAINING_STATUS.md  CHANGELOG.md  CHANNEL_NORMALIZATION_EXPLAINED.md  CHECKLIST_COMPLETE.md  COMPETITION_RESULTS_ANALYSIS.md  COMPETITION_TRAINING_STATUS.md  COMPLETED_TASKS_OCT17.md  COMPLETE_STATUS_OCT22.md  COMPLETE_TODO_LIST.md  COMPREHENSIVE_IMPROVEMENT_PLAN.md  CRITICAL_BUGS_FIXED_REPORT.md  CRITICAL_TASKS_P0.md  CROSS_TASK_IMPLEMENTATION.md  CURRENT_STATUS.md  DAILY_SUMMARY_OCT22.md  DEPENDENCY_VERIFICATION.md  DIRECTORY_INDEX.md  DOCS_UPDATED_OCT18.md  EEGNEX_ROCM_STRATEGY.md  ENSEMBLE_TRAINING_STATUS_OCT30.md  EXECUTIVE_SUMMARY.md  EXTENSION_CLEANUP_COMPLETE.md  EXTRACTION_WORKING.md  FILE_INVENTORY.md  FINAL_COMPLETION_SUMMARY.md  FINAL_ROCM_SOLUTION_PLAN.md  FINAL_SESSION_STATUS_OCT30.md  FINAL_SESSION_SUMMARY_OCT30.md  FINAL_STATUS_OCT22_11AM.md  FINAL_STATUS_REALISTIC.md  (+229 more)
.copilot/: README.md  prompts.json
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
archive/: COMPETITION_RULES.md  README_OLD_OCT17.md  SUBMISSION_HISTORY.md
assets/: README.md
backend/: demo_server.py
checkpoints/: c2_phase1_best.pt  challenge1_improved_best.pth  challenge1_tcn_best.pth  challenge1_tcn_competition_history.json  challenge1_tcn_enhanced_best.pth  challenge1_tcn_enhanced_history.json  challenge1_tcn_history.json  challenge1_tcn_real_best.pth  challenge1_tcn_real_history.json  challenge2_tcn_competition_history.json
config/: challenge1_anti_overfit.yaml  competition_config.yaml  foundation_model_small.yaml
configs/: challenge1.yaml  challenge2.yaml  data.yaml  enhanced.yaml  eval.yaml  pretrain.yaml  train_cross_task.yaml  train_psych.yaml
data/: metadata.db
docker/: Dockerfile  Dockerfile.demo  compose.yml  docker-compose.demo.yml  docker-compose.mongo.yml  docker-compose.nosql.yml  nginx.conf
docs/: 01_DATA_ACQUISITION_GUIDE.md  02_VALIDATION_TESTING_GUIDE.md  03_QUICK_START_TODO.md  AMD_GPU_SOLUTION_SUMMARY.md  BASELINE_TRAINING_RESULTS.md  C1_IMPROVEMENT_ROADMAP.md  C1_VARIANCE_REDUCTION_PLAN.md  CACHED_DATA_INFO.md  CHALLENGE1_IMPROVED_TRAINING.md  CHALLENGE1_IMPROVEMENT_STRATEGY.md  CHALLENGE1_TRAINING_ACTIVE.md  CHALLENGE1_TRAINING_COMPLETE.md  CHALLENGE2_RESULTS.md  CHALLENGE2_ZERO_VARIANCE_CRISIS.md  CHANGELOG.md  CHANNEL_HANDLING_EXPLAINED.md  CLEANUP_SUMMARY_OCT27.md  COMPETITION_FINAL_STATUS.md  COMPETITIVE_ADVANTAGES.md  COMPLETION_CHECKLIST.md  CRITICAL_ISSUE_VALIDATION.md  CRITICAL_VALIDATION_DISCOVERY.md  CUFFT_CUBLAS_GUIDE.md  DAILY_CHECKLIST.md  DATABASE_DESIGN.md  DATA_ACQUISITION_GUIDE.md  DATA_ACQUISITION_INDEX.md  DIRECTORY_STRUCTURE.md  DOCUMENTATION_ORGANIZED.md  FINAL_TRAINING_RESULTS.md  GITIGNORE_UPDATE_COMPLETE.md  GPU_ARCHITECTURE_CONFIRMED.md  GPU_CPU_HYBRID_IMPLEMENTATION.md  GPU_INVESTIGATION_FINAL.md  GPU_OPTIMIZATION_SUMMARY.md  GPU_SAFEGUARDS.md  INDEX.md  (+43 more)
(+874 files in other folders)
